<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/TotalNum"
    android:background="@drawable/library_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.presentation.CardLibraryActivity">

    <Button
        android:id="@+id/Back"
        android:layout_width="95dp"
        android:layout_height="54dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:onClick="BackHomePage"
        android:text="R/BACK"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>


    <Button
        android:id="@+id/StartEdit"
        android:layout_width="95dp"
        android:layout_height="54dp"
        android:layout_marginStart="144dp"
        android:layout_marginLeft="144dp"
        android:layout_marginTop="16dp"
        android:onClick="startSelect"
        android:text="Edit Deck"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/SaveSelected"
        android:layout_width="95dp"
        android:layout_height="54dp"
        android:layout_marginStart="144dp"
        android:layout_marginLeft="144dp"
        android:layout_marginTop="16dp"
        android:text="Save"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/CancelSelected"
        android:layout_width="95dp"
        android:layout_height="54dp"
        android:layout_marginStart="248dp"
        android:layout_marginLeft="248dp"
        android:layout_marginTop="16dp"
        android:text="Cancel"
        android:onClick="cancelSelect"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/ViewFilter"
        android:layout_width="152dp"
        android:layout_height="120dp"
        android:layout_marginStart="268dp"
        android:layout_marginLeft="268dp"
        android:layout_marginTop="4dp"
        android:checkedButton="@id/ShowAll"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/ShowAll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="showAll"
            android:text="All Cards"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/ShowUnlocked"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="showUnlocked"
            android:text="Unlocked Cards"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/ShowLocked"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="showLocked"
            android:text="Locked Cards"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/ShowDeck"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="showMyDeck"
            android:text="Deck"
            android:textStyle="bold" />
    </RadioGroup>

    <TextView
        android:id="@+id/CashNum"
        android:layout_width="wrap_content"
        android:layout_height="81dp"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="520dp"
        android:layout_marginLeft="550dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:textColor="#000000"
        android:textSize="40sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/CashText"
        android:layout_width="wrap_content"
        android:layout_height="81dp"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="448dp"
        android:layout_marginLeft="448dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="Gold"
        android:textColor="#000000"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/UnlockedText"
        android:layout_width="100dp"
        android:layout_height="80dp"
        android:layout_marginStart="660dp"
        android:layout_marginLeft="660dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:gravity="center"
        android:textSize="24sp"
        android:textColor="#000000"
        android:text="Unlocked Cards"
        app:layout_constraintEnd_toStartOf="@+id/UnlockedNum"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/UnlockedNum"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:gravity="center"
        android:textColor="#000000"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toEndOf="@+id/UnlockedText"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/RecyclerView"
        android:layout_width="900dp"
        android:layout_height="400dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.8">

    </androidx.recyclerview.widget.RecyclerView>
</androidx.constraintlayout.widget.ConstraintLayout>