...
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_marginTop="5dp"-->
                <!--android:gravity="center"-->
                <!--android:textSize="20sp"/>-->
            <!--<Button-->
                <!--android:id="@+id/libraryPopupCardUnlockButton"-->
                <!--android:layout_width="100dp"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_gravity="center"-->
                <!--android:layout_marginTop="5dp"-->
                <!--android:layout_marginBottom="15dp"-->
                <!--android:visibility="invisible"-->
...
