...
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:columnCount="5"
        android:rowCount="1">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardview_0"
            android:layout_width="100dp"
            android:layout_height="120dp"
            android:layout_columnWeight="1">

            <LinearLayout
                android:layout_width="match_parent"
...
                </LinearLayout>
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardview_1"
            android:layout_width="100dp"
            android:layout_height="120dp"
            android:layout_columnWeight="1">

            <LinearLayout
                android:layout_width="match_parent"
...
                </LinearLayout>
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardview_2"
            android:layout_width="100dp"
            android:layout_height="120dp"
            android:layout_columnWeight="1">

            <LinearLayout
                android:layout_width="match_parent"
...
