...
                android:layout_height="100dp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:textSize="12dp"/>
            <Button
                android:id="@+id/playcard_popup_btn"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:text="PLAY CARD"
                android:layout_marginBottom="5dp"/>
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
